--- a/src/Styles/Components/Navbar.scss
+++ b/src/Styles/Components/Navbar.scss
@@ -32,7 +32,7 @@ nav {
         }
       }
     }
-    .Resume {
+    .ResumeLink {
       border: 2px solid var(--icon-Color-1);
       padding: 5px 12px;
       border-radius: 12px;
