--- a/src/Styles/Main.scss
+++ b/src/Styles/Main.scss
@@ -13,3 +13,5 @@
 @use "./Components/Expertise.scss";
 @use "./Components/Projects.scss";
 @use "./Components/Footer.scss";
+@use "./Components/AnimationBlur.scss";
+
