--- a/src/Styles/Components/Projects.scss
+++ b/src/Styles/Components/Projects.scss
@@ -38,9 +38,10 @@ grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
   grid-row-gap:20px;
   grid-column-gap:20px;
   justify-items:center;
-  align-content:center;
-  width: 70vw;
+  align-items:center;
+  width: 80vw;
   height: auto;
+  border:1px solid #fff;
 }
 
 
