--- a/src/Styles/Components/Projects.scss
+++ b/src/Styles/Components/Projects.scss
@@ -32,6 +32,18 @@ $black: #000;
   }
 }
 
+@media (max-width: 490px) {
+  :root{
+    --width-Grid: 100vw;
+  }
+}
+@media (min-width: 490px) {
+  :root{
+    --width-Grid: 80vw;
+  }
+}
+
+
 .ProjectsGrid {
   display: grid;
 grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
@@ -39,7 +51,7 @@ grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
   grid-column-gap:20px;
   justify-items:center;
   align-items:center;
-  width: 80vw;
+  width:   var(--width-Grid);
   height: auto;
   border:1px solid #fff;
 }
