--- a/src/Styles/Button/Toggle.scss
+++ b/src/Styles/Button/Toggle.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index:4;
+  z-index:16;
   height: 60px;
   width: 300px;
   display: flex;
@@ -26,12 +26,17 @@
   transition-duration: 0.3s;
 }
 
+.toggle:hover .bars{
+  background-color: var(--icon-Color-1);
+}
+
 .bars {
   width: 100%;
   height: 4px;
-  background-color: var(--icon-Color-1);
+  background-color: #fff8;
   border-radius: 5px;
   transition-duration: 0.3s;
+
 }
 
 #checkbox:checked + .toggle .bars {
