--- a/src/Styles/Components/Footer.scss
+++ b/src/Styles/Components/Footer.scss
@@ -32,7 +32,7 @@
 }
 
 .Designed {
-  font-size: 15px;
+  font-size: 20px;
   font-family: var(--ff-Sarala);
   text-align: center;
   color: var(--icon-Color-1);
@@ -41,7 +41,7 @@
   justify-content: center;
   align-items: center;
   gap: 5px;
-    color: var(--Text-Color-1);
+    color: #fff9;
 
 }
 
@@ -50,7 +50,7 @@
 }
 
 .Designed a:hover {
-  color: #1f9c78;
+  color: #1fdfa8;
 }
 .contacto{
   padding-top: 30px;
